--- a/app/src/main/res/layout/result_fragment.xml
+++ b/app/src/main/res/layout/result_fragment.xml
@@ -23,14 +23,13 @@
                 android:id="@+id/category1Left_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="@dimen/margin_large"
+                android:layout_marginTop="@dimen/margin_medium"
                 android:layout_marginEnd="64dp"
                 android:layout_marginBottom="32dp"
                 android:text="@{String.valueOf(resultViewModel.result.gospodarkaLeft)}"
                 app:layout_constraintBottom_toTopOf="@+id/textView2"
                 app:layout_constraintEnd_toStartOf="@+id/category1Right_textView"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView"
                 tools:text="50" />
@@ -39,14 +38,13 @@
                 android:id="@+id/category2Left_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="@dimen/margin_large"
+                android:layout_marginTop="@dimen/margin_medium"
                 android:layout_marginEnd="64dp"
                 android:layout_marginBottom="32dp"
                 android:text="@{String.valueOf(resultViewModel.result.spoleczenstwoLeft)}"
                 app:layout_constraintBottom_toTopOf="@+id/textView3"
                 app:layout_constraintEnd_toStartOf="@+id/category2Right_textView"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView2"
                 tools:text="50" />
@@ -55,14 +53,13 @@
                 android:id="@+id/category3Left_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="@dimen/margin_large"
+                android:layout_marginTop="@dimen/margin_medium"
                 android:layout_marginEnd="64dp"
                 android:layout_marginBottom="32dp"
                 android:text="@{String.valueOf(resultViewModel.result.politykaWLeft)}"
                 app:layout_constraintBottom_toTopOf="@+id/textView4"
                 app:layout_constraintEnd_toStartOf="@+id/category3Right_textView"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView3"
                 tools:text="50" />
@@ -71,14 +68,13 @@
                 android:id="@+id/category4Left_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginStart="@dimen/margin_large"
+                android:layout_marginTop="@dimen/margin_medium"
                 android:layout_marginEnd="64dp"
                 android:layout_marginBottom="32dp"
                 android:text="@{String.valueOf(resultViewModel.result.politykaZLeft)}"
-                app:layout_constraintBottom_toTopOf="@+id/relativeLayout3"
+                app:layout_constraintBottom_toTopOf="@+id/relativelayoutResultFragment"
                 app:layout_constraintEnd_toStartOf="@+id/category4Right_textView"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView4"
                 tools:text="50" />
@@ -88,7 +84,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="64dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="@dimen/margin_large"
                 android:text="@{String.valueOf(resultViewModel.result.gospodarkaRight)}"
                 app:layout_constraintBaseline_toBaselineOf="@+id/category1Left_textView"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -101,7 +97,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="64dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="@dimen/margin_large"
                 android:text="@{String.valueOf(resultViewModel.result.spoleczenstwoRight)}"
                 app:layout_constraintBaseline_toBaselineOf="@+id/category2Left_textView"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -114,7 +110,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="64dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="@dimen/margin_large"
                 android:text="@{String.valueOf(resultViewModel.result.politykaWRight)}"
                 app:layout_constraintBaseline_toBaselineOf="@+id/category3Left_textView"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -127,7 +123,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="64dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="@dimen/margin_large"
                 android:text="@{String.valueOf(resultViewModel.result.politykaZRight)}"
                 app:layout_constraintBaseline_toBaselineOf="@+id/category4Left_textView"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -137,14 +133,13 @@
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="379dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginStart="@dimen/margin_large"
+                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginEnd="@dimen/margin_large"
+                android:layout_marginBottom="@dimen/margin_medium"
                 android:text="@string/gospodarka_text"
-                android:textAlignment="center"
                 app:layout_constraintBottom_toTopOf="@+id/category1Left_textView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -152,14 +147,13 @@
 
             <TextView
                 android:id="@+id/textView2"
-                android:layout_width="379dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginStart="@dimen/margin_large"
+                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginEnd="@dimen/margin_large"
+                android:layout_marginBottom="@dimen/margin_medium"
                 android:text="@string/społeczeństwo_text"
-                android:textAlignment="center"
                 app:layout_constraintBottom_toTopOf="@+id/category2Left_textView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -167,14 +161,13 @@
 
             <TextView
                 android:id="@+id/textView3"
-                android:layout_width="379dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginStart="@dimen/margin_large"
+                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginEnd="@dimen/margin_large"
+                android:layout_marginBottom="@dimen/margin_medium"
                 android:text="@string/polityka_wewnętrzna_text"
-                android:textAlignment="center"
                 app:layout_constraintBottom_toTopOf="@+id/category3Left_textView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -182,26 +175,25 @@
 
             <TextView
                 android:id="@+id/textView4"
-                android:layout_width="379dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginStart="@dimen/margin_large"
+                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginEnd="@dimen/margin_large"
+                android:layout_marginBottom="@dimen/margin_medium"
                 android:text="@string/polityka_zewnętrzna_text"
-                android:textAlignment="center"
                 app:layout_constraintBottom_toTopOf="@+id/category4Left_textView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/category3Left_textView" />
 
             <RelativeLayout
-                android:id="@+id/relativeLayout3"
+                android:id="@+id/relativelayoutResultFragment"
                 android:layout_width="320dp"
                 android:layout_height="320dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginStart="@dimen/margin_large"
+                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginEnd="@dimen/margin_large"
                 android:layout_marginBottom="32dp"
                 app:layout_constraintBottom_toTopOf="@+id/btn_delete"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -209,16 +201,16 @@
                 app:layout_constraintTop_toBottomOf="@+id/category4Left_textView">
 
                 <ImageView
-                    android:id="@+id/compass_image2"
+                    android:id="@+id/compass_image_resultFragment"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:contentDescription="@string/political_compass_image_description"
                     app:srcCompat="@drawable/ic_political_compass" />
 
                 <ImageView
-                    android:id="@+id/dot_image2"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
+                    android:id="@+id/dot_image_resultFragment"
+                    android:layout_width="@dimen/dotImage_size_large"
+                    android:layout_height="@dimen/dotImage_size_large"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentBottom="true"
                     app:testResultDotImageResultFragment="@{resultViewModel.result}"
@@ -230,16 +222,16 @@
                 android:id="@+id/btn_delete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginStart="@dimen/margin_large"
+                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginEnd="@dimen/margin_large"
+                android:layout_marginBottom="@dimen/margin_medium"
                 android:onClick="@{() -> resultViewModel.onDelete()}"
                 android:text="@string/delete_button_text"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/relativeLayout3" />
+                app:layout_constraintTop_toBottomOf="@+id/relativelayoutResultFragment" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
