--- a/app/src/main/res/layout/test_fragment.xml
+++ b/app/src/main/res/layout/test_fragment.xml
@@ -21,12 +21,11 @@
             android:id="@+id/question_number_textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="@dimen/margin_medium"
+            android:layout_marginTop="@dimen/margin_medium"
+            android:layout_marginEnd="@dimen/margin_medium"
+            android:layout_marginBottom="@dimen/margin_medium"
             android:text="@{@string/question_number_format(testViewModel.questionNumber)}"
-            android:textAlignment="center"
             app:layout_constraintBottom_toTopOf="@+id/question_textView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -36,14 +35,13 @@
 
         <TextView
             android:id="@+id/question_textView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginStart="@dimen/margin_large"
+            android:layout_marginTop="@dimen/margin_medium"
+            android:layout_marginEnd="@dimen/margin_large"
+            android:layout_marginBottom="@dimen/margin_medium"
             android:text="@{testViewModel.question}"
-            android:textAlignment="center"
             app:layout_constraintBottom_toTopOf="@+id/agree2_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -52,12 +50,12 @@
 
         <Button
             android:id="@+id/agree2_button"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/margin_large"
             android:layout_marginTop="64dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="@dimen/margin_large"
+            android:layout_marginBottom="@dimen/margin_medium"
             android:onClick="@{() -> testViewModel.onButtonClickNextStrongAgree()}"
             android:text="@string/agree2_button_text"
             app:layout_constraintBottom_toTopOf="@+id/agree_button"
@@ -67,12 +65,12 @@
 
         <Button
             android:id="@+id/agree_button"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="@dimen/margin_large"
+            android:layout_marginTop="@dimen/margin_medium"
+            android:layout_marginEnd="@dimen/margin_large"
+            android:layout_marginBottom="@dimen/margin_medium"
             android:onClick="@{() -> testViewModel.onButtonClickNextAgree()}"
             android:text="@string/agree_button_text"
             app:layout_constraintBottom_toTopOf="@+id/neutral_button"
@@ -83,12 +81,12 @@
 
         <Button
             android:id="@+id/neutral_button"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="@dimen/margin_large"
+            android:layout_marginTop="@dimen/margin_medium"
+            android:layout_marginEnd="@dimen/margin_large"
+            android:layout_marginBottom="@dimen/margin_medium"
             android:onClick="@{() -> testViewModel.onButtonClickNextNeutral()}"
             android:text="@string/neutral_button_text"
             app:layout_constraintBottom_toTopOf="@+id/disagree_button"
@@ -98,12 +96,12 @@
 
         <Button
             android:id="@+id/disagree_button"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="@dimen/margin_large"
+            android:layout_marginTop="@dimen/margin_medium"
+            android:layout_marginEnd="@dimen/margin_large"
+            android:layout_marginBottom="@dimen/margin_medium"
             android:onClick="@{() -> testViewModel.onButtonClickNextDisagree()}"
             android:text="@string/disagree_button_text"
             app:layout_constraintBottom_toTopOf="@+id/disagree2_button"
@@ -113,12 +111,12 @@
 
         <Button
             android:id="@+id/disagree2_button"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="@dimen/margin_large"
+            android:layout_marginTop="@dimen/margin_medium"
+            android:layout_marginEnd="@dimen/margin_large"
+            android:layout_marginBottom="@dimen/margin_medium"
             android:onClick="@{() -> testViewModel.onButtonClickNextStrongDisagree()}"
             android:text="@string/disagree2_button_text"
             app:layout_constraintBottom_toTopOf="@+id/previus_question_button"
@@ -128,7 +126,7 @@
 
         <Button
             android:id="@+id/previus_question_button"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginTop="32dp"
