dodanie scrollview, aby po obróceniu ekranu layout był do obejrzenia.

--- a/app/src/main/res/layout/test_fragment.xml
+++ b/app/src/main/res/layout/test_fragment.xml
@@ -10,135 +10,140 @@
             type="com.example.kompaspolityczny.screens.test.TestViewModel" />
     </data>
 
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".screens.test.TestFragment">
+        android:layout_height="match_parent">
 
-
-        <TextView
-            android:id="@+id/question_number_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_medium"
-            android:layout_marginTop="@dimen/margin_medium"
-            android:layout_marginEnd="@dimen/margin_medium"
-            android:layout_marginBottom="@dimen/margin_medium"
-            android:text="@{@string/question_number_format(testViewModel.questionNumber)}"
-            app:layout_constraintBottom_toTopOf="@+id/question_textView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed"
-            tools:text="Pytanie nr. :" />
-
-        <TextView
-            android:id="@+id/question_textView"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_large"
-            android:layout_marginTop="@dimen/margin_medium"
-            android:layout_marginEnd="@dimen/margin_large"
-            android:layout_marginBottom="@dimen/margin_medium"
-            android:text="@{testViewModel.question}"
-            app:layout_constraintBottom_toTopOf="@+id/agree2_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/question_number_textView"
-            tools:text="Tekst pytania, które może być bardzo długie. Nawet dłuższe od tego tutaj podanego i pokazanego w tym przykładzie. Bla Bla Bla, tak zdecydowanie" />
-
-        <Button
-            android:id="@+id/agree2_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_large"
-            android:layout_marginTop="64dp"
-            android:layout_marginEnd="@dimen/margin_large"
-            android:layout_marginBottom="@dimen/margin_medium"
-            android:onClick="@{() -> testViewModel.onButtonClickNextStrongAgree()}"
-            android:text="@string/agree2_button_text"
-            app:layout_constraintBottom_toTopOf="@+id/agree_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/question_textView" />
-
-        <Button
-            android:id="@+id/agree_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_large"
-            android:layout_marginTop="@dimen/margin_medium"
-            android:layout_marginEnd="@dimen/margin_large"
-            android:layout_marginBottom="@dimen/margin_medium"
-            android:onClick="@{() -> testViewModel.onButtonClickNextAgree()}"
-            android:text="@string/agree_button_text"
-            app:layout_constraintBottom_toTopOf="@+id/neutral_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/agree2_button" />
-
-        <Button
-            android:id="@+id/neutral_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_large"
-            android:layout_marginTop="@dimen/margin_medium"
-            android:layout_marginEnd="@dimen/margin_large"
-            android:layout_marginBottom="@dimen/margin_medium"
-            android:onClick="@{() -> testViewModel.onButtonClickNextNeutral()}"
-            android:text="@string/neutral_button_text"
-            app:layout_constraintBottom_toTopOf="@+id/disagree_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/agree_button" />
-
-        <Button
-            android:id="@+id/disagree_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_large"
-            android:layout_marginTop="@dimen/margin_medium"
-            android:layout_marginEnd="@dimen/margin_large"
-            android:layout_marginBottom="@dimen/margin_medium"
-            android:onClick="@{() -> testViewModel.onButtonClickNextDisagree()}"
-            android:text="@string/disagree_button_text"
-            app:layout_constraintBottom_toTopOf="@+id/disagree2_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/neutral_button" />
-
-        <Button
-            android:id="@+id/disagree2_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_large"
-            android:layout_marginTop="@dimen/margin_medium"
-            android:layout_marginEnd="@dimen/margin_large"
-            android:layout_marginBottom="@dimen/margin_medium"
-            android:onClick="@{() -> testViewModel.onButtonClickNextStrongDisagree()}"
-            android:text="@string/disagree2_button_text"
-            app:layout_constraintBottom_toTopOf="@+id/previus_question_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/disagree_button" />
-
-        <Button
-            android:id="@+id/previus_question_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="64dp"
-            android:onClick="@{() -> testViewModel.onButtonClickPrevius()}"
-            android:text="@string/previus_question_button_text"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/disagree2_button" />
+            android:layout_height="match_parent"
+            tools:context=".screens.test.TestFragment">
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/question_number_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_medium"
+                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginEnd="@dimen/margin_medium"
+                android:layout_marginBottom="@dimen/margin_medium"
+                android:text="@{@string/question_number_format(testViewModel.questionNumber)}"
+                app:layout_constraintBottom_toTopOf="@+id/question_textView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="packed"
+                tools:text="Pytanie nr. :" />
+
+            <TextView
+                android:id="@+id/question_textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_large"
+                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginEnd="@dimen/margin_large"
+                android:layout_marginBottom="@dimen/margin_medium"
+                android:text="@{testViewModel.question}"
+                android:textAlignment="center"
+                app:layout_constraintBottom_toTopOf="@+id/agree2_button"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/question_number_textView"
+                tools:text="Tekst pytania, które może być bardzo długie. Nawet dłuższe od tego tutaj podanego i pokazanego w tym przykładzie. Bla Bla Bla, tak zdecydowanie" />
+
+            <Button
+                android:id="@+id/agree2_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_large"
+                android:layout_marginTop="64dp"
+                android:layout_marginEnd="@dimen/margin_large"
+                android:layout_marginBottom="@dimen/margin_medium"
+                android:onClick="@{() -> testViewModel.onButtonClickNextStrongAgree()}"
+                android:text="@string/agree2_button_text"
+                app:layout_constraintBottom_toTopOf="@+id/agree_button"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/question_textView" />
+
+            <Button
+                android:id="@+id/agree_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_large"
+                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginEnd="@dimen/margin_large"
+                android:layout_marginBottom="@dimen/margin_medium"
+                android:onClick="@{() -> testViewModel.onButtonClickNextAgree()}"
+                android:text="@string/agree_button_text"
+                app:layout_constraintBottom_toTopOf="@+id/neutral_button"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/agree2_button" />
+
+            <Button
+                android:id="@+id/neutral_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_large"
+                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginEnd="@dimen/margin_large"
+                android:layout_marginBottom="@dimen/margin_medium"
+                android:onClick="@{() -> testViewModel.onButtonClickNextNeutral()}"
+                android:text="@string/neutral_button_text"
+                app:layout_constraintBottom_toTopOf="@+id/disagree_button"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/agree_button" />
+
+            <Button
+                android:id="@+id/disagree_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_large"
+                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginEnd="@dimen/margin_large"
+                android:layout_marginBottom="@dimen/margin_medium"
+                android:onClick="@{() -> testViewModel.onButtonClickNextDisagree()}"
+                android:text="@string/disagree_button_text"
+                app:layout_constraintBottom_toTopOf="@+id/disagree2_button"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/neutral_button" />
+
+            <Button
+                android:id="@+id/disagree2_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_large"
+                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginEnd="@dimen/margin_large"
+                android:layout_marginBottom="@dimen/margin_medium"
+                android:onClick="@{() -> testViewModel.onButtonClickNextStrongDisagree()}"
+                android:text="@string/disagree2_button_text"
+                app:layout_constraintBottom_toTopOf="@+id/previus_question_button"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/disagree_button" />
+
+            <Button
+                android:id="@+id/previus_question_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="64dp"
+                android:onClick="@{() -> testViewModel.onButtonClickPrevius()}"
+                android:text="@string/previus_question_button_text"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/disagree2_button" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 </layout>
