--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -11,20 +11,21 @@
         tools:context=".screens.title.TitleFragment">
 
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/start_test_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/start_test_button_text"
-            android:layout_marginEnd="@dimen/margin_medium"
             android:layout_marginStart="@dimen/margin_medium"
-            app:layout_constraintBottom_toTopOf="@+id/author_textView"
+            android:layout_marginEnd="@dimen/margin_medium"
+            app:cornerRadius="@dimen/margin_large"
+            android:text="@string/start_test_button_text"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.25" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/history_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -35,19 +36,6 @@
             app:layout_constraintEnd_toEndOf="@+id/start_test_button"
             app:layout_constraintStart_toStartOf="@+id/start_test_button"
             app:layout_constraintTop_toBottomOf="@+id/start_test_button" />
-
-        <TextView
-            android:id="@+id/author_textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/margin_medium"
-            android:layout_marginEnd="@dimen/margin_medium"
-            android:layout_marginStart="@dimen/margin_medium"
-            android:text="@string/author_text"
-            android:textColor="@color/authorDescription"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
