Zmiana buttons na material buttons

--- a/app/src/main/res/layout/fragment_title.xml
+++ b/app/src/main/res/layout/fragment_title.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_medium"
             android:layout_marginEnd="@dimen/margin_medium"
-            app:cornerRadius="@dimen/margin_large"
+            app:cornerRadius="@dimen/radius_medium"
             android:text="@string/start_test_button_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -30,6 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/margin_medium"
+            app:cornerRadius="@dimen/radius_medium"
             android:layout_marginStart="@dimen/margin_medium"
             android:text="@string/history_button_text"
             app:layout_constraintBottom_toBottomOf="parent"
