--- a/app/src/main/res/layout/result_fragment.xml
+++ b/app/src/main/res/layout/result_fragment.xml
@@ -218,7 +218,7 @@
 
             </RelativeLayout>
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_delete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -228,8 +228,10 @@
                 android:layout_marginBottom="@dimen/margin_medium"
                 android:onClick="@{() -> resultViewModel.onDelete()}"
                 android:text="@string/delete_button_text"
+                app:cornerRadius="@dimen/radius_medium"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/relativelayoutResultFragment" />
 
