--- a/app/src/main/res/layout/test_fragment.xml
+++ b/app/src/main/res/layout/test_fragment.xml
@@ -52,10 +52,11 @@
                 app:layout_constraintTop_toBottomOf="@+id/question_number_textView"
                 tools:text="Tekst pytania, które może być bardzo długie. Nawet dłuższe od tego tutaj podanego i pokazanego w tym przykładzie. Bla Bla Bla, tak zdecydowanie" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/agree2_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:cornerRadius="@dimen/radius_medium"
                 android:layout_marginStart="@dimen/margin_large"
                 android:layout_marginTop="64dp"
                 android:layout_marginEnd="@dimen/margin_large"
@@ -67,9 +68,10 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/question_textView" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/agree_button"
                 android:layout_width="match_parent"
+                app:cornerRadius="@dimen/radius_medium"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_large"
                 android:layout_marginTop="@dimen/margin_medium"
@@ -83,12 +85,13 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/agree2_button" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/neutral_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_large"
                 android:layout_marginTop="@dimen/margin_medium"
+                app:cornerRadius="@dimen/radius_medium"
                 android:layout_marginEnd="@dimen/margin_large"
                 android:layout_marginBottom="@dimen/margin_medium"
                 android:onClick="@{() -> testViewModel.onButtonClickNextNeutral()}"
@@ -98,10 +101,11 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/agree_button" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/disagree_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:cornerRadius="@dimen/radius_medium"
                 android:layout_marginStart="@dimen/margin_large"
                 android:layout_marginTop="@dimen/margin_medium"
                 android:layout_marginEnd="@dimen/margin_large"
@@ -113,12 +117,13 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/neutral_button" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/disagree2_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_large"
                 android:layout_marginTop="@dimen/margin_medium"
+                app:cornerRadius="@dimen/radius_medium"
                 android:layout_marginEnd="@dimen/margin_large"
                 android:layout_marginBottom="@dimen/margin_medium"
                 android:onClick="@{() -> testViewModel.onButtonClickNextStrongDisagree()}"
@@ -128,10 +133,11 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/disagree_button" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/previus_question_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:cornerRadius="@dimen/radius_medium"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="32dp"
