--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="dotImage_size_small">6dp</dimen>
     <dimen name="margin_large">16dp</dimen>
     <dimen name="dotImage_size_large">24dp</dimen>
+    <dimen name="radius_medium">4dp</dimen>
 </resources>
